// file: proto/gcommon/v2/metrics/v2/get_metrics_summary_request.proto
// version: 1.0.0
// guid: 9617cdf7-a614-4717-a660-aae208eb1774

edition = "2023";

package metrics.v2;

import "common/v2/request_metadata.proto";
import "common/v2/time_range_metrics.proto";
import "metrics/v2/metric_filter.proto";
import "metrics/v2/summary_options.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/metrics/v2";

message GetMetricsSummaryRequest {
  // Standard request metadata (tracing, auth, etc.)
  common.v1.RequestMetadata metadata = 1;

  // Optional filter to limit which metrics to include in summary
  MetricFilter filter = 2;

  // Time range for the summary
  common.v1.TimeRangeMetrics time_range = 3;

  // What summary information to include
  SummaryOptions options = 4;

  // Optional provider ID to query
  string provider_id = 5 [(buf.validate.field).string.min_len = 1];

  // Whether to include provider-level statistics
  bool include_provider_stats = 6;

  // Whether to include health status information
  bool include_health_status = 7;
}
