// filepath: pkg/metrics/proto/responses/record_metric_response.proto
// file: metrics/proto/responses/record_metric_response.proto
//
// Record metric response definitions for metrics module
//
edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/common/proto/metrics/proto/metrics/proto/recording_stats.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto;metricspb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * RecordMetricResponse contains the result of recording a metric data point.
 */
message RecordMetricResponse {
  // Success status of the operation
  bool success = 1;

  // Error information if the operation failed
  gcommon.v1.common.Error error = 2;

  // Unique ID assigned to the recorded metric (if applicable)
  string metric_id = 3;

  // Timestamp when the metric was actually recorded
  google.protobuf.Timestamp recorded_at = 4;

  // Provider that handled the metric
  string provider_id = 5;

  // Validation results if validation was requested
  ValidationResult validation = 6;

  // Performance metrics about the recording operation
  RecordingStats stats = 7;

  // Warnings or informational messages
  repeated string warnings = 8;
}


