// file: organization/proto/messages/compute_isolation.proto
// version: 1.0.0
// guid: 4d8711b4-c65d-43b7-a0ae-8453f4ffa71f

edition = "2023";

package gcommon.v1.organization;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ComputeIsolation {
  // Dedicated compute instance identifier
  string compute_instance = 1;

  // Container or namespace identifier
  string namespace = 2;

  // CPU allocation for this tenant
  CPUAllocation cpu = 3;

  // Memory allocation for this tenant
  MemoryAllocation memory = 4;

  // Whether tenant has dedicated compute resources
  bool dedicated_compute = 5;

  // Resource limits and quotas
  ResourceLimits limits = 6;

  // Auto-scaling configuration
  AutoScalingConfig auto_scaling = 7;
}
