// file: pkg/web/proto/responses/get_metrics_response.proto
// version: 1.0.0
// guid: d42faed3-d602-4066-a445-01c6f1bf8448

edition = "2023";

package gcommon.v1.web;

option go_package = "github.com/jdfalk/gcommon/pkg/web/proto";

// GetMetricsResponse response definition.
message GetMetricsResponse {
  string placeholder = 1;
}
