// file: pkg/web/proto/messages/security_config.proto
// version: 1.0.0
// guid: 2d5231ca-5b58-4b11-8448-a87d4ae0154e

edition = "2023";

package gcommon.v1.web;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/web/proto;webpb";
option features.(pb.go).api_level = API_HYBRID;

// SecurityConfig message definition.
message SecurityConfig {
  string placeholder = 1;
}
